--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.2",
     "tailwind-merge": "^2.2.1",
     "use-sound": "^4.0.1",
     "zustand": "^4.5.2"
