--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.2",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.2.1",
     "use-sound": "^4.0.1",
     "zustand": "^4.5.2"
